--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "mysql": "^2.17.1"
   },
@@ -12,6 +13,6 @@
     "nodemon": "^1.19.1"
   },
   "scripts": {
-    "dev": "nodemon backend/src/app.js"
+    "dev": "nodemon index.js"
   }
 }
