--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "mysql2": "^1.6.5",
+    "sequelize": "^5.15.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
