--- a/package.json
+++ b/package.json
@@ -4,18 +4,52 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "@babel/polyfill": "^7.8.7",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
+    "core-js": "^2.6.11",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "history": "^4.10.1",
     "mongoose": "^5.6.10",
     "mysql": "^2.17.1",
     "mysql2": "^1.6.5",
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^5.7.2",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "sequelize": "^5.21.7"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.8.3",
+    "@babel/plugin-proposal-optional-chaining": "^7.9.0",
+    "@babel/preset-env": "^7.9.6",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "concurrently": "^5.2.0",
+    "css-loader": "^3.5.3",
+    "dotenv": "^8.2.0",
+    "dotenv-webpack": "^1.8.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "nodemon": "^2.0.3",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
+  "proxy": "http://localhost:4000",
   "scripts": {
-    "dev": "nodemon index.js"
+    "build": "npx webpack --mode production",
+    "buildDev": "npx webpack --mode development",
+    "server": "nodemon index.js",
+    "start": "concurrently --kill-others \"npm run server\" \"npx webpack-dev-server --mode development\""
   }
 }
