--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
     "concurrently": "^5.2.0",
     "css-loader": "^3.5.3",
     "dotenv": "^8.2.0",
@@ -40,16 +41,18 @@
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
     "nodemon": "^2.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^3.0.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^4.2.2"
   },
   "proxy": "http://localhost:4000",
   "scripts": {
-    "build": "npx webpack --mode production",
-    "buildDev": "npx webpack --mode development",
+    "build": "webpack --config webpack.prod.js",
     "server": "nodemon index.js",
-    "start": "concurrently --kill-others \"npm run server\" \"npx webpack-dev-server --mode development\""
+    "start": "concurrently --kill-others \"npm run server\" \"npx webpack-dev-server  --env.APP_PORT=3000 --config webpack.dev.js --profile --colors\""
   }
 }
